# accentd

./: .gitignore  Cargo.toml  LICENSE  README.md  test.sh
crates/accentctl/: Cargo.toml
crates/accentctl/src/: main.rs
crates/accentd/: Cargo.toml
crates/accentd-core/: Cargo.toml
crates/accentd-core/src/: charmap.rs  config.rs  ipc.rs  lib.rs
crates/accentd-popup/: Cargo.toml
crates/accentd-popup/src/: ipc_client.rs  layer_shell.rs  main.rs  window.rs
crates/accentd/src/: compose.rs  grabber.rs  main.rs  state_machine.rs  uinput_emitter.rs
data/: config.default.toml
data/locales/: de.toml  es.toml  fr.toml  it.toml  pt.toml
