[package]
name = "accentd"
version.workspace = true
edition.workspace = true

[dependencies]
accentd-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
evdev = { version = "0.12", features = ["tokio"] }
nix = { version = "0.29", features = ["ioctl", "fs"] }
inotify = "0.11"
